charts/istio/mtls/06-dr-disable-otel.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: disable-mtls-otel-collector
  namespace: istio-system
spec:
  host: otel-collector.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
